# ResearcherX

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9185a9a789e6_init.py
backend/app/: main.py
backend/app/agents/: base.py  critic.py  planner.py  searcher.py  synthesizer.py
backend/app/api/v1/: research.py  router.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: migrate.py  models.py  session.py
backend/app/llm/: client.py  structured.py
backend/app/schemas/: research.py
backend/app/services/: event_bus.py  research_service.py  task_registry.py
backend/app/tools/: base.py  web_search.py
backend/tests/: conftest.py  test_citations.py  test_event_bus.py  test_llm_failover.py  test_research_flow.py  test_security.py  test_structured.py  test_validation_loop.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/research/[id]/: page.tsx
frontend/src/components/: query-form.tsx  run-stream.tsx
frontend/src/lib/: api.ts  types.ts
