[project]
name = "researcherx-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "openai>=1.54",
  "ddgs>=6.0",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "aiosqlite>=0.20",
  "alembic>=1.13",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "structlog>=24.4",
  "httpx>=0.27",
  "sse-starlette>=2.1",
  "limits>=5.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.7", "pytest>=8.3", "pytest-asyncio>=0.24"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
